--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "format": "prettier --write ./src",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -23,11 +24,15 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@docusaurus/eslint-plugin": "^3.3.0",
     "@docusaurus/module-type-aliases": "3.2.1",
     "@docusaurus/types": "3.2.1",
     "autoprefixer": "^10.4.19",
+    "eslint-config-prettier": "^9.1.0",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3"
   },
   "browserslist": {
