--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@docusaurus/preset-classic": "3.2.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-fade": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
